--- a/contact.html
+++ b/contact.html
@@ -96,8 +96,8 @@
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner desc">
-		   					<h2 class="heading-section">Contact Us</h2>
-		   					<p class="colorlib-lead">Designed with love by the fine folks at <a href="#" target="_blank">Lawfirm</a></p>
+		   					<h2 class="heading-section">Entre em Contato com GonchBank</h2>
+		   					<p class="colorlib-lead">Desenvolvido especialmente para você! <a href="#" target="_blank">Lawfirm</a></p>
 		   				</div>
 		   			</div>
 		   		</div>
@@ -236,11 +236,11 @@
 				</div>
 
 				<div class="col-md-3 col-md-push-1">
-					<h4>Contact Information</h4>
+					<h4>Mais Informações:</h4>
 					<ul class="colorlib-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
+						<li>Endereço, <br> Cidade</li>
 						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
+						<li><a href="mailto:info@yoursite.com">info@gonchbank.com</a></li>
 					</ul>
 				</div>
 
