--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-2">
-						<div id="colorlib-logo"><a href="index.html">Law<span>firm.</span></a></div>
+						<div id="colorlib-logo"><a href="index.php">teste<span>123.</span></a></div>
 					</div>
 					<div class="col-md-10 text-right menu-1">
 						<ul>
