--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -52,38 +52,28 @@
 
 	</head>
 	<body>
-		
+
 	<div class="colorlib-loader"></div>
-	
+
 	<div id="page">
 	<nav class="colorlib-nav" role="navigation">
 		<div class="top-menu">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-2">
-						<div id="colorlib-logo"><a href="index.html">Law<span>firm.</span></a></div>
+						<div id="colorlib-logo"><a href="index.php">Gonch<span>Bank</span></a></div>
 					</div>
 					<div class="col-md-10 text-right menu-1">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="practice.html">Practice Areas</a></li>
-							<li><a href="won.html">Won Cases</a></li>
-							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
-								<ul class="dropdown">
-									<li><a href="#">menu 1</a></li>
-									<li><a href="#">menu 2</a></li>
-									<li><a href="#">menu 3</a></li>
-									<li><a href="#">menu 4</a></li>
+							<li class="active"><a href="index.php">Página Inicial</a></li>
+							<li><a href="about.html">Sobre</a></li>
+							<li><a href="contact.html">Contato</a></li>
+							<li class="btn-cta"><a href="login-admin.php"><span>Acesso administrativo</span></a></li>
 								</ul>
 							</li>
-							<li><a href="about.html">About</a></li>
-							<li class="active"><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="#"><span>Make an Appointment</span></a></li>
-						</ul>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 	</nav>
@@ -105,12 +95,12 @@
 		  	</ul>
 	  	</div>
 	</aside>
-	
+
 	<div id="colorlib-contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-5 col-md-push-1 animate-box">
-					
+
 					<div class="colorlib-contact-info">
 						<h3>Contact Information</h3>
 						<ul>
@@ -160,10 +150,10 @@
 							<input type="submit" value="Send Message" class="btn btn-primary">
 						</div>
 
-					</form>		
+					</form>
 				</div>
 			</div>
-			
+
 		</div>
 	</div>
 	<div id="map" class="colorlib-map"></div>
@@ -211,12 +201,12 @@
 					<input type="submit" value="Send Message" class="btn btn-primary">
 				</div>
 
-			</form>	
+			</form>
 		</div>
 	</div>
 
 
-	
+
 	<footer id="colorlib-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
@@ -258,7 +248,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-					<small class="block">&copy; 2018 LawFirm. All Rights Reserved. Created by <a href="https://colorlib.com/" target="_blank">Colorlib</a></small> 
+					<small class="block">&copy; 2018 LawFirm. All Rights Reserved. Created by <a href="https://colorlib.com/" target="_blank">Colorlib</a></small>
 					<small class="block">Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
@@ -279,7 +269,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -307,4 +297,3 @@
 
 	</body>
 </html>
-
