--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
               <div class="features-icons-icon d-flex">
-                <i class="icon-phone m-auto text-primary"></i>
+                <i class="icon-screen-desktop m-auto text-primary"></i>
               </div>
               <h3>Fully Responsive</h3>
               <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
